// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API endpoints Org create 1`] = `
{
  "description": "Org NEW description",
  "id": 4,
  "name": "Org NEW",
  "slug": "orgNEW",
}
`;

exports[`API endpoints Org get 1`] = `
{
  "description": "Org 1 description",
  "id": 1,
  "name": "Org 1",
  "slug": "org1",
}
`;

exports[`API endpoints Org list 1`] = `
[
  {
    "description": "Org 1 description",
    "id": 1,
    "name": "Org 1",
    "slug": "org1",
  },
  {
    "description": "Org 2 description",
    "id": 2,
    "name": "Org 2",
    "slug": "org2",
  },
  {
    "description": "Org 3 description",
    "id": 3,
    "name": "Org 3",
    "slug": "org3",
  },
]
`;

exports[`API endpoints Org update 1`] = `
{
  "description": "Org 2A description",
  "id": 2,
  "name": "Org 2A",
  "slug": "org2",
}
`;

exports[`API endpoints Repo create 1`] = `
{
  "description": "Repo 6 description",
  "id": 6,
  "org_id": 1,
  "slug": "repo6",
}
`;

exports[`API endpoints Repo get 1`] = `
{
  "description": "Repo 1 description",
  "id": 1,
  "org_id": 1,
  "slug": "repo1",
}
`;

exports[`API endpoints Repo list 1`] = `
[
  {
    "description": "Repo 1 description",
    "id": 1,
    "org_id": 1,
    "slug": "repo1",
  },
  {
    "description": "Repo 2 description",
    "id": 2,
    "org_id": 1,
    "slug": "repo2",
  },
  {
    "description": "Repo 3 description",
    "id": 3,
    "org_id": 1,
    "slug": "repo3",
  },
]
`;

exports[`API endpoints Repo update 1`] = `
{
  "description": "Repo 2A description",
  "id": 2,
  "org_id": 1,
  "slug": "repo2",
}
`;
